--- a/style.css
+++ b/style.css
@@ -1,3 +1,106 @@
-body{
-  background-color: red;
+@import "tailwindcss";
+
+@keyframes rotateOnce {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@keyframes scalePulse {
+
+  0%,
+  100% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+
+  }
+}
+
+
+* {
+  font-family: "Inter", sans-serif;
+  box-sizing: border-box;
+}
+
+
+.hero {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+.hero-container {
+ 
+  position: relative;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-img {
+   display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  justify-content: center;
+  background-position: center;
+}
+
+.img-box {
+  width: 22vw;
+  max-width: 350px;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+
+}
+
+.middle-img {
+  width: 100%;
+height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-img {
+  width: 30%;
+  max-width: 110px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: rotateOnce 2s linear;
+}
+
+.badge {
+  position: absolute;
+  top: 3%;
+  right: 5%;
+  font-size: 100%;
+  padding: 2% 4%;
+  border-radius: 10%;
+  background: #00FF88;
+  color: #1A0B2E;
+
+  border-radius: 40px;
+  font-weight: bold;
+  animation: scalePulse 1.5s ease-in-out infinite;
+}
+.hero-content {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+max-width: 550px;
 }
